include/Argon.h

/*
 * SPDX-FileCopyrightText: 2026 William Bell
 *
 * SPDX-License-Identifier: MIT
 */

#ifndef Argon_NATIVE_H
#define Argon_NATIVE_H

#ifdef __cplusplus
extern "C" {
#include <cstddef>
#else
#include <stddef.h>
#endif

#include "ArgonFunction.h"
#include "ArgonTypes.h"
#include <stdbool.h>
#include <stdint.h>
#include <string.h>

#define ARGON_NATIVE_API_VERSION 1

typedef struct RuntimeState ArgonState;

typedef struct ArErr ArErr;

typedef struct ArErr ArgonError;

typedef struct hashmap_GC ArgonObjectRegister;

typedef struct ArgonObject ArgonObject;

typedef struct ArgonNativeAPI ArgonNativeAPI;

typedef struct hashmap_GC ArgonHashmap;

typedef ArgonObject *(*native_fn)(ARGON_FUNCTION_ARGS);

struct rational {
  int64_t n;
  int64_t d;
};

struct string {
  char *data;
  size_t length;
};

struct buffer {
  void *data;
  size_t size;
};

struct array {
  ArgonObject **items;
  size_t size;
};

struct ArgonNativeAPI {
  void (*register_ArgonObject)(ArgonObjectRegister *reg, char *name,
                               ArgonObject *obj);
  ArgonObject *(*create_argon_native_function)(char *name, native_fn);
  ArgonObject *(*call)(ArgonObject *original_object, size_t argc,
                       ArgonObject **argv, ArgonHashmap *kwargs,
                       ArgonError *err, ArgonState *state);
  ArgonObject *(*throw_argon_error)(ArgonError *err, ArgonObject *type,
                                    const char *fmt, ...);
  bool (*is_error)(ArgonError *err);
  bool (*fix_to_arg_size)(size_t limit, size_t argc, ArgonError *err);

  // numbers
  ArgonObject *(*i64_to_argon)(int64_t);
  ArgonObject *(*double_to_argon)(double);
  ArgonObject *(*rational_to_argon)(struct rational);
  int64_t (*argon_to_i64)(ArgonObject *, ArgonError *);
  double (*argon_to_double)(ArgonObject *, ArgonError *);
  struct rational (*argon_to_rational)(ArgonObject *, ArgonError *);

  // strings
  ArgonObject *(*string_to_argon)(struct string);
  struct string (*argon_to_string)(ArgonObject *, ArgonError *);

  // buffers
  ArgonObject *(*create_argon_buffer)(size_t size);
  void (*resize_argon_buffer)(ArgonObject *obj, ArgonError *err,
                              size_t new_size);
  struct buffer (*argon_buffer_to_buffer)(ArgonObject *obj, ArgonError *err);

  // literals
  ArgonObject *ARGON_NULL;
  ArgonObject *ARGON_TRUE;
  ArgonObject *ARGON_FALSE;

  int (*register_thread)();
  int (*unregister_thread)();

  ArgonObject *(*create_err_object)();
  ArgonError *(*err_object_to_err)(ArgonObject *, ArgonError *);
  ArgonState *(*new_state)(ArgonObject **registers);
  void (*set_err)(ArgonObject *object, ArgonError *err);

  void *(*malloc)(size_t);
  void (*free)(void *);

  struct array (*argon_to_array)(ArgonObject *, ArgonError *);
  int (*argon_get_ArgonType)(ArgonObject *);
  bool (*argon_is_i64)(ArgonObject *);

  ArgonObject *BaseException;
  ArgonObject *Exception;
  ArgonObject *RuntimeError;
  ArgonObject *SyntaxError;
  ArgonObject *ConversionError;
  ArgonObject *MathsError;
  ArgonObject *ZeroDivisionError;
  ArgonObject *NameError;
  ArgonObject *TypeError;
  ArgonObject *InternalError;
  ArgonObject *IndexError;
  ArgonObject *AttributeError;
  ArgonObject *PathError;
  ArgonObject *FileError;
  ArgonObject *ImportError;
  ArgonObject *SignalException;
  ArgonObject *SignalKeyboardInterrupt;
  ArgonObject *SignalStopIteration;

  ArgonObject *(*throw_argon_signal)(ArgonError *, ArgonObject *);

  ArgonHashmap *(*create_hashmap)();
  ArgonObject *(*hashmap_to_dictionary)(ArgonHashmap *);
  void (*add_to_hashmap)(ArgonHashmap *hashmap, ArgonObject *key,
                         ArgonObject *value, ArgonState *state,
                         ArgonError *err);
  void (*add_to_hashmap_string_key)(ArgonHashmap *hashmap, char *key,
                                    ArgonObject *value);
  ArgonObject* (*get_from_hashmap)(ArgonHashmap *hashmap, ArgonObject *key,
                           ArgonState *state, ArgonError *err);
  ArgonObject* (*get_from_hashmap_string_key)(ArgonHashmap *hashmap, char *key);
  void (*remove_from_hashmap)(ArgonHashmap *hashmap, ArgonObject *key,
                              ArgonState *state, ArgonError *err);
  void (*remove_from_hashmap_string_key)(ArgonHashmap *hashmap, char *key);

  ArgonObject *(*create_argon_array)(ArgonObject ** array, size_t size);
};

#define ARGON_STRING_FROM_C_STRING(str)                                        \
  api->string_to_argon((struct string){str, strlen(str)})

__attribute__((visibility("default"))) void
argon_module_init(ArgonState *vm, ArgonNativeAPI *api, ArgonError *err,
                  ArgonObjectRegister *reg);

#ifdef __cplusplus
}
#endif

#endif // Argon_NATIVE_H