native_code_example/src/argon_sys.rs

// SPDX-FileCopyrightText: 2026 William Bell
//
// SPDX-License-Identifier: MIT

/* automatically generated by rust-bindgen 0.72.1 */

#[allow(dead_code)]
pub const ARGON_NATIVE_API_VERSION: u32 = 1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArgonState {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArgonError {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArgonObjectRegister {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArgonObject {
    _unused: [u8; 0],
}
pub type NativeFn = ::std::option::Option<
    unsafe extern "C" fn(
        argc: usize,
        argv: *mut *mut ArgonObject,
        err: *mut ArgonError,
        state: *mut ArgonState,
        api: *mut ArgonNativeAPI,
    ) -> *mut ArgonObject,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rational {
    pub n: i64,
    pub d: i64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct string {
    pub data: *mut ::std::os::raw::c_char,
    pub length: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct buffer {
    pub data: *mut ::std::os::raw::c_void,
    pub size: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArgonNativeAPI {
    pub register_argon_object: ::std::option::Option<
        unsafe extern "C" fn(
            reg: *mut ArgonObjectRegister,
            name: *mut ::std::os::raw::c_char,
            obj: *mut ArgonObject,
        ),
    >,
    pub create_argon_native_function: ::std::option::Option<
        unsafe extern "C" fn(
            name: *mut ::std::os::raw::c_char,
            arg1: NativeFn,
        ) -> *mut ArgonObject,
    >,
    pub call: ::std::option::Option<
        unsafe extern "C" fn(
            original_object: *mut ArgonObject,
            argc: usize,
            argv: *mut *mut ArgonObject,
            err: *mut ArgonError,
            state: *mut ArgonState,
        ) -> *mut ArgonObject,
    >,
    pub throw_argon_error: ::std::option::Option<
        unsafe extern "C" fn(
            err: *mut ArgonError,
            type_: *const ::std::os::raw::c_char,
            fmt: *const ::std::os::raw::c_char,
            ...
        ) -> *mut ArgonObject,
    >,
    pub is_error: ::std::option::Option<unsafe extern "C" fn(err: *mut ArgonError) -> bool>,
    pub fix_to_arg_size: ::std::option::Option<
        unsafe extern "C" fn(limit: usize, argc: usize, err: *mut ArgonError) -> bool,
    >,
    pub i64_to_argon: ::std::option::Option<unsafe extern "C" fn(arg1: i64) -> *mut ArgonObject>,
    pub double_to_argon: ::std::option::Option<unsafe extern "C" fn(arg1: f64) -> *mut ArgonObject>,
    pub rational_to_argon:
        ::std::option::Option<unsafe extern "C" fn(arg1: rational) -> *mut ArgonObject>,
    pub argon_to_i64: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArgonObject, arg2: *mut ArgonError) -> i64,
    >,
    pub argon_to_double: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArgonObject, arg2: *mut ArgonError) -> f64,
    >,
    pub argon_to_rational: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArgonObject, arg2: *mut ArgonError) -> rational,
    >,
    pub string_to_argon:
        ::std::option::Option<unsafe extern "C" fn(arg1: string) -> *mut ArgonObject>,
    pub argon_to_string: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArgonObject, arg2: *mut ArgonError) -> string,
    >,
    pub create_argon_buffer:
        ::std::option::Option<unsafe extern "C" fn(size: usize) -> *mut ArgonObject>,
    pub resize_argon_buffer: ::std::option::Option<
        unsafe extern "C" fn(obj: *mut ArgonObject, err: *mut ArgonError, new_size: usize),
    >,
    pub argon_buffer_to_buffer: ::std::option::Option<
        unsafe extern "C" fn(obj: *mut ArgonObject, err: *mut ArgonError) -> buffer,
    >,
    pub argon_null: *mut ArgonObject,
    pub argon_true: *mut ArgonObject,
    pub argon_false: *mut ArgonObject,
    pub register_thread: ::std::option::Option<unsafe extern "C" fn() -> ::std::os::raw::c_int>,
    pub unregister_thread: ::std::option::Option<unsafe extern "C" fn() -> ::std::os::raw::c_int>,
    pub create_err_object: ::std::option::Option<unsafe extern "C" fn() -> *mut ArgonObject>,
    pub err_object_to_err: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArgonObject, arg2: *mut ArgonError) -> *mut ArgonError,
    >,
    pub new_state: ::std::option::Option<
        unsafe extern "C" fn(registers: *mut *mut ArgonObject) -> *mut ArgonState,
    >,
    pub set_err:
        ::std::option::Option<unsafe extern "C" fn(object: *mut ArgonObject, err: *mut ArgonError)>,
    pub malloc:
        ::std::option::Option<unsafe extern "C" fn(arg1: usize) -> *mut ::std::os::raw::c_void>,
    pub free: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
}
unsafe extern "C" {
    #[allow(dead_code)]
    pub fn argon_module_init(
        vm: *mut ArgonState,
        api: *mut ArgonNativeAPI,
        err: *mut ArgonError,
        reg: *mut ArgonObjectRegister,
    );
}
